Fixed contrast on footer

--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -42,14 +42,14 @@ section {
   flex-direction: column;
 }
 
-a {
+main a {
   font-size: 0.9em;
   margin: 10px 20px 3px 0;
   text-align: right;
   text-decoration: none;
   color: #22223b;
 }
-a:hover {
+main a:hover {
   color: #555977;
 }
 .img {
@@ -68,6 +68,14 @@ footer {
   line-height: normal;
   padding-bottom: 50px;
   background-color: #16ffbd;
+  color: black;
+}
+
+footer a {
+  color: black;
+}
+footer a:hover {
+  color: #474747;
 }
 
 #footer-hr {
